@@ -79,6 +79,9 @@ public class InteropCvlMasivoNifDAO {
      * Consulta para auditoria/reimpresion por id.
      */
     public List<InteropCvlMasivoNifVO> getRegistrosById(final Long id, final Connection con) throws Exception {
+        final String tabla = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         final String sql = "SELECT ID, FECHA_EJECUCION, NIF, TIPO_DOC, COD_RESPUESTA, DESC_RESPUESTA, PAYLOAD_RESUMEN, USUARIO"
                 + " FROM " + ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES) + " WHERE ID = ?";
         return ejecutarConsulta(sql, id, null, con);
@@ -89,6 +92,9 @@ public class InteropCvlMasivoNifDAO {
      */
     public List<InteropCvlMasivoNifVO> getRegistrosByFechaEjecucion(final Timestamp fechaDesde,
             final Timestamp fechaHasta, final Connection con) throws Exception {
+        final String tabla2 = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         final String sql = "SELECT ID, FECHA_EJECUCION, NIF, TIPO_DOC, COD_RESPUESTA, DESC_RESPUESTA, PAYLOAD_RESUMEN, USUARIO"
                 + " FROM " + ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES) + " WHERE FECHA_EJECUCION BETWEEN ? AND ? ORDER BY FECHA_EJECUCION DESC, ID DESC";
         return ejecutarConsulta(sql, null, new Timestamp[]{fechaDesde, fechaHasta}, con);
@@ -113,7 +119,7 @@ public class InteropCvlMasivoNifDAO {
             rs = st.executeQuery();
             while (rs.next()) {
                 result.add(new InteropCvlMasivoNifVO(
-                        new Long(rs.getLong("ID")),
+                        Long.valueOf(rs.getLong("ID")),
                         rs.getTimestamp("FECHA_EJECUCION"),
                         rs.getString("NIF"),
                         rs.getString("TIPO_DOC"),
@@ -138,6 +144,9 @@ public class InteropCvlMasivoNifDAO {
     }
 
     private int getNextId(final Connection con) throws Exception {
+        final String secuencia = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.SEQ_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         Statement st = null;
         ResultSet rs = null;
         final String secuencia = ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.SEQ_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
